# Stoma

./: .claude-instructions.md  .env.deep_research.example  .env.example  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  ACTIVE_PLAN.md  CLAUDE.md  CURRENT_STATUS.md  FEATURE_BACKLOG.md  HANDOFF_PROMPT.md  README.md  ROADMAP.md  config.yaml  config_local.yaml  demo_morning_report.py  enhanced_insight_extractor.py  example_config.yaml  generate_morning_report.py  lightweight_config.py  memory_integration_design.md  minimal_pipeline.py  neural_network_report.md  parse_real_analysis.py  protein_folding_analysis.json  pyproject.toml  pytest.ini  real_llm_analysis_parsed.json  repository-restructuring-migration.md  requirements.txt  run_pipeline.py  sample_analysis_report.json  sample_lightweight_analysis_report.py  setup_lightweight_llm.sh  setup_local.sh  test_deep_research_integration.py  test_enhanced_pipeline.py  test_lightweight_ollama.py  test_llm_intelligence.py  (+9 more)
dev-scripts/: advanced_model_manager.py  batch_processor.py  cross_paper_synthesizer.py  debug_odr_integration.py  demo_morning_report.py  format_research_report.py  generate_morning_report.py  high_quality_analysis.py  json_parsing_analysis.py  model_comparison.py  production_pipeline.py  simplified_parser.py
docs/: COMPETITIVE_LANDSCAPE.md  INFRASTRUCTURE_PLANNING.md  LIGHTWEIGHT_OLLAMA_SETUP.md  OLLAMA_SETUP_GUIDE.md  PHASE2_LLM_STRATEGY.md  QUICK_INTEGRATIONS.md  SCHEDULER.md
enhanced_production_pipeline/: pipeline_state.json
formatted_reports/: reinforcement_learning_architectures_20250929_120348.html  reinforcement_learning_architectures_20250929_120348.md  reinforcement_learning_architectures_20250929_120504.md
knowhunt/analysis/: __init__.py  correlation_analyzer.py  llm_analyzer.py  nlp_service.py  specialized_llm_analyzer.py
knowhunt/api/: __init__.py  main.py
knowhunt/cli/: main.py
knowhunt/collectors/: __init__.py  base.py  github.py  reddit.py  sec_edgar.py
knowhunt/config/: settings.py
knowhunt/enrichment/: pdf_extractor.py  web_scraper.py
knowhunt/normalizers/: base.py  code_projects.py  public_docs.py
knowhunt/parsers/: tika_parser.py
knowhunt/pipeline/: data_types.py
knowhunt/processors/: __init__.py
knowhunt/reports/: __init__.py  data_driven_generator.py  export_formats.py  morning_pdf_generator.py  research_reports.py  template_manager.py
knowhunt/scheduler/: base.py
knowhunt/storage/: __init__.py  base.py  database.py  report_manager.py
production_pipeline_data/: pipeline_state.json
reports/: enhanced_production_report.html  enhanced_production_report.md  production_intelligence_report.html  production_intelligence_report.md  real_report.html  real_report.md  research_landscape_20250923_160847_20250923_160847.markdown  sample_report_20250923_160651.md
reports/minimal_pipeline/: analysis_AI_agents_20250925_132801.json  analysis_AI_agents_20250925_133428.json  analysis_AI_agents_20250925_172943.json  (+8 more)
scripts/: install-scheduler-service.sh  knowhunt-scheduler.service  stoma-scheduler.service
stoma/: __init__.py
stoma/analysis/: nlp_analyzer.py  (+3 more)
tests/: test_arxiv_collector.py
(+107 files in other folders)
